--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 }
 :root {
   /* --primaryColor: #af9a7d; */
-  --primaryColor: #4D9354;
+  --primaryColor: #46864D;
   --mainWhite: #fff;
   --offWhite: #f7f7f7;
   --mainBlack: #222;
@@ -60,15 +60,18 @@ h6 {
   letter-spacing: var(--mainSpacing);
   color: var(--mainBlack);
   background: var(--primaryColor);
+  /* background: var(--mainWhite); */
   padding: 0.4rem 0.9rem;
   border: 3px solid var(--primaryColor);
+  /* border: 3px solid var(--mainWhite); */
   transition: var(--mainTransition);
   text-transform: uppercase;
   cursor: pointer;
 }
 .btn-primary:hover {
   background: transparent;
-  color: var(--primaryColor);
+  /* color: var(--primaryColor); */
+  color: var(--mainWhite);
 }
 .loading {
   text-transform: capitalize;
@@ -158,7 +161,7 @@ h6 {
 /* end of navbar */
 /* Hero */
 .defaultHero,
-.trailssHero {
+.trailsHero {
   min-height: calc(100vh - 66px);
   background: url("./images/RMNP-hero.jpeg") center/cover no-repeat;
   display: flex;
@@ -173,7 +176,7 @@ h6 {
 /* Banner */
 .banner {
   display: inline-block;
-  background: rgba(0, 0, 0, 0.5);
+  background: rgba(0, 0, 0, 0.65);
   color: var(--mainWhite);
   padding: 2rem 1rem;
   text-align: center;
